<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">




    <EditText
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:hint="Course code"
        android:inputType="textCapCharacters" />


    <EditText
        android:id="@+id/in_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/course"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="-142dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-107dp"
        android:layout_toEndOf="@+id/course"
        android:layout_toRightOf="@+id/course"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-3dp"
        android:layout_toEndOf="@+id/in_date"
        android:text="@string/select_date"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/in_date" />

    <EditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="168dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_time"
        android:layout_marginBottom="-143dp"
        android:hint="duration hrs"
        android:inputType="number" />


    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:text="select time"
        android:layout_marginLeft="12dp"
        android:layout_alignLeft="@+id/btn_date" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="26dp"
        android:onClick="goHomeLecturer"
        android:text="done"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp" />

    <EditText
        android:id="@+id/asstype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="326dp"
        android:ems="10"
        android:hint="assessment type"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="195dp" />

</RelativeLayout>
