package com.example.software_chasers.tutor_tracker;

public class LoginXusename {
//    private String user,pass;
//
//    @Rule
//    public ActivityTestRule<MainActivity> activityRule = new ActivityTestRule<>(MainActivity.class);
//
//    @Before
//    public void intStrings(){
//        user = "jbgifbcgkbvkvjv";
//        pass = "1661233";
//    }
//
//    @Test
//    public void login(){
//
//        ViewInteraction username = onView(withId(R.id.editText2));
//        username.perform(typeText(user),closeSoftKeyboard());
//        ViewInteraction password = onView(withId(R.id.editText));
//        password.perform(typeText(pass),closeSoftKeyboard());
//        ViewInteraction button = onView(withId(R.id.button2));
//        button.perform(click());
//        button.check(doesNotExist());
//
//    }
}
